fix(frontent): :bug: Fix compatibility issues on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -579,6 +579,16 @@
   .classy-underline {
     border-bottom: solid 1px #ffffff32;
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
 
 @layer utilities {
